tests/src/frontend/syntax/invalid/modifier_children.sk
base class Foo {
  private children = A
}
